# nes-emulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  build_wasm.sh  cmake_install.cmake  docker-compose.yml  mprocs.yaml
.github/workflows/: build-and-deploy.yml  build-and-test.yml  deploy.yml  version-check.yml
deploy/: nginx.conf
docs/: ARCHITECTURE.md  rl-env-spec.md
include/: apu.h  bus.h  cartridge.h  controller.h  cpu.h  cpu6502.h  debugger.h  mapper.h  mapper_cnrom.h  mapper_mmc1.h  mapper_mmc3.h  mapper_uxrom.h  mapper_zero.h  memory.h  nes.h  nes_env.h  palette.h  ppu.h  types.h
letsencrypt/: acme.json
python/: README.md  pyproject.toml
python/examples/: random_agent.py  record_scripted.py  train_ppo.py
python/nesenv/: __init__.py  _native.py  core.py  env.py  gymnasium_env.py  live.py  movie.py  smb.py
python/tests/: test_env.py
src/: apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  cpu6502.cpp  debugger.cpp  main.cpp  mapper.cpp  mapper_cnrom.cpp  mapper_mmc1.cpp  mapper_mmc3.cpp  mapper_uxrom.cpp  mapper_zero.cpp  memory.cpp  nes.cpp  nes_env.cpp  palette.cpp  ppu.cpp  wasm_main.cpp
test-roms/: checkerboard.nes  make-checkerboard.mjs
tests/: apu_test.cpp  bus_test_ppu.cpp  cartridge_test_ines.cpp  conformance_test.cpp  controller_test.cpp  cpu_test_arithmetic.cpp  cpu_test_base.h  cpu_test_branch.cpp  cpu_test_control_flow.cpp  cpu_test_flags.cpp  cpu_test_illegal.cpp  cpu_test_increment_decrement.cpp  cpu_test_init.cpp  cpu_test_load.cpp  cpu_test_logic.cpp  cpu_test_nmi.cpp  cpu_test_nop.cpp  cpu_test_shift_rotate.cpp  cpu_test_stack.cpp  cpu_test_store.cpp  cpu_test_transfer.cpp  cpu_tests.cpp  debugger_test_rom_boot.cpp  debugger_test_run_frame.cpp  mapper_test.cpp  nes_env_test.cpp  palette_test.cpp  ppu_test_init.cpp  ppu_test_loopy.cpp  ppu_test_memory.cpp  ppu_test_registers.cpp  ppu_test_render.cpp  ppu_test_sprites.cpp  ppu_test_timing.cpp  test_cartridge.h
tests/roms/: README.md  fetch_test_roms.sh
tools/: record_demo.cpp
web/: debugger-ui.js  index.html  nes-debugger.js  nes_debugger.js  nes_debugger.wasm  package.json  pnpm-lock.yaml  vite.config.ts
web/css/: animations.css  layout.css  theme.css
web/js/: bindings.js  cpu_wasm.js  main.js  nes_debugger.js  nes_debugger.wasm  theme.js  ui.js
web/js/core/: debugger.js
web/js/ui/: debugger-ui.js  theme.js  utils.js
web/public/roms/: LICENSES.md
web/src/: App.test.tsx  App.tsx  main.tsx
web/src/components/: AppShell.test.tsx  AppShell.tsx  BreakpointsPanel.test.tsx  BreakpointsPanel.tsx  CpuStatePanel.tsx  DisassemblyPanel.test.tsx  DisassemblyPanel.tsx  DisassemblyRow.test.tsx  DisassemblyRow.tsx  FlagsBadges.test.tsx  FlagsBadges.tsx  FlagsBlock.tsx  HelpModal.test.tsx  HelpModal.tsx  LoadCodeModal.test.tsx  LoadCodeModal.tsx  LoadCodePanel.test.tsx  LoadCodePanel.tsx  MemoryEditModal.test.tsx  MemoryEditModal.tsx  MemoryPanel.test.tsx  MemoryPanel.tsx  OamViewer.test.tsx  OamViewer.tsx  PlayMode.tsx  PpuViewer.test.tsx  PpuViewer.tsx  RegistersPanel.test.tsx  RegistersPanel.tsx  ScreenPanel.test.tsx  ScreenPanel.tsx  StackPanel.test.tsx  StackPanel.tsx  StatisticsPanel.test.tsx  StatisticsPanel.tsx  Toolbar.test.tsx  Toolbar.tsx
web/src/components/toast/: ToastProvider.test.tsx  ToastProvider.tsx  Toaster.tsx
web/src/components/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Modal.test.tsx  Modal.tsx  Module.tsx  MonoValue.tsx  Panel.test.tsx  Panel.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Tile.tsx
web/src/emulator/: EmulatorProvider.test.tsx  EmulatorProvider.tsx  audio.ts  devModule.test.ts  devModule.ts  movie.test.ts  movie.ts  useController.ts  useDisassembly.test.tsx  useDisassembly.ts  useFillRows.test.tsx  useFillRows.ts  useFrameLoop.test.ts  useFrameLoop.ts  useMemory.test.tsx  useMemory.ts  useRunLoop.test.ts  useRunLoop.ts
web/src/games/: catalog.ts
web/src/styles/: global.css  tokens.css
web/src/test/: global-setup.js
web/src/wasm/: bridge.test.ts  bridge.ts  disassembly.test.ts  disassembly.ts  loader.test.ts  loader.ts  opcodes.test.ts  opcodes.ts  operand-format.test.ts  operand-format.ts  types.test.ts  types.ts
web/src/wasm/testing/: mockModule.test.ts  mockModule.ts
