[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nesenv"
version = "0.1.0"
description = "Deterministic headless NES environment and RL gym built on the C++ core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
dependencies = []

[project.optional-dependencies]
# The base package is stdlib-only. These extras enable the Gymnasium adapter and
# PPO training (use a Python with torch wheels, e.g. 3.11).
gym = ["gymnasium>=0.29", "numpy>=1.21"]
train = ["gymnasium>=0.29", "numpy>=1.21", "stable-baselines3>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nesenv*"]
